Refactor report service, and cover it with tests